--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyBNJv7RBo3NxXhmPySRq9EKo_tH4W_dDcs" />
 
         <activity
             android:name=".MapsActivity"
